there is a player cube

--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -14,9 +14,11 @@
   <script type="text/javascript" src="/javascripts/sylvester.src.js"> </script>
   <script type="text/javascript" src="/javascripts/core.js"></script>
   <script type="text/javascript" src="/javascripts/movable.js"></script>
+  <script type="text/javascript" src="/javascripts/game.js"></script>
   <!-- include spec files here... -->
-  <script type="text/javascript" src="/spec/coreSpec.js"></script>
-  <script type="text/javascript" src="/spec/positionalSpec.js"></script>
+  <script type="text/javascript" src="/spec/core_spec.js"></script>
+  <script type="text/javascript" src="/spec/movable_spec.js"></script>
+  <script type="text/javascript" src="/spec/game_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
