--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -11,14 +11,17 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="/javascripts/underscore.js"></script>
+  <script type="text/javascript" src="/javascripts/keyboard.js"></script>
   <script type="text/javascript" src="/javascripts/sylvester.src.js"> </script>
   <script type="text/javascript" src="/javascripts/core.js"></script>
   <script type="text/javascript" src="/javascripts/movable.js"></script>
+  <script type="text/javascript" src="/javascripts/cube.js"></script>
   <script type="text/javascript" src="/javascripts/game.js"></script>
   <!-- include spec files here... -->
   <script type="text/javascript" src="/spec/core_spec.js"></script>
   <script type="text/javascript" src="/spec/movable_spec.js"></script>
   <script type="text/javascript" src="/spec/game_spec.js"></script>
+  <script type="text/javascript" src="/spec/cube_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
