drawing background on a separate canvas

--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -22,6 +22,7 @@
   <script type="text/javascript" src="/spec/movable_spec.js"></script>
   <script type="text/javascript" src="/spec/game_spec.js"></script>
   <script type="text/javascript" src="/spec/cube_spec.js"></script>
+  <script type="text/javascript" src="/spec/world_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
