--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="/javascripts/sylvester.src.js"> </script>
   <script type="text/javascript" src="/javascripts/core.js"></script>
   <script type="text/javascript" src="/javascripts/world.js"></script>
+  <script type="text/javascript" src="/javascripts/audio.js"></script>
   <script type="text/javascript" src="/javascripts/movable.js"></script>
   <script type="text/javascript" src="/javascripts/shot.js"></script>
   <script type="text/javascript" src="/javascripts/cube.js"></script>
