--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/javascripts/jasmine-1.2.0/jasmine.css">
   <script type="text/javascript" src="/javascripts/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="/javascripts/jasmine-1.2.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="/javascripts/underscore.js"></script>
@@ -26,6 +27,7 @@
   <script type="text/javascript" src="/spec/game_spec.js"></script>
   <script type="text/javascript" src="/spec/cube_spec.js"></script>
   <script type="text/javascript" src="/spec/world_spec.js"></script>
+  <script type="text/javascript" src="/spec/flavours_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
