--- a/public/spec/test.html
+++ b/public/spec/test.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="/javascripts/underscore.js"></script>
   <script type="text/javascript" src="/javascripts/keyboard.js"></script>
   <script type="text/javascript" src="/javascripts/sylvester.src.js"> </script>
+  <script type="text/javascript" src="/javascripts/object_factory.js"></script>
   <script type="text/javascript" src="/javascripts/core.js"></script>
   <script type="text/javascript" src="/javascripts/world.js"></script>
   <script type="text/javascript" src="/javascripts/audio.js"></script>
